--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,6 +19,9 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           release: 'R2024b' # Adjust to your target MATLAB version
+          products: |
+            Statistics_and_Machine_Learning_Toolbox
+            Parallel_Computing_Toolbox
 
       - name: Build HERA Runtime
         uses: matlab-actions/run-command@v2
