--- a/.github/workflows/manual_test.yml
+++ b/.github/workflows/manual_test.yml
@@ -13,6 +13,10 @@ jobs:
 
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
+        with:
+          products: |
+            Statistics_and_Machine_Learning_Toolbox
+            Parallel_Computing_Toolbox
 
       - name: Run Tests
         uses: matlab-actions/run-command@v2
