feat: Implement corrected Holm-Bonferroni step-down procedure within power analysis bootstrap simulations and add MATLAB_Compiler dependency.

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -22,6 +22,7 @@ jobs:
           products: |
             Statistics_and_Machine_Learning_Toolbox
             Parallel_Computing_Toolbox
+            MATLAB_Compiler
 
       - name: Build HERA Runtime
         uses: matlab-actions/run-command@v2
