feat: Changed Convergence check of bootstrap ranking to max(IQR), Enhanced unit test validation with output checks, integrated unit tests into CI workflow for HERA built, and corrected paper and bibliography entries.

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -24,6 +24,11 @@ jobs:
             Parallel_Computing_Toolbox
             MATLAB_Compiler
 
+      - name: Run Unit Tests
+        uses: matlab-actions/run-command@v2
+        with:
+          command: run('tests/run_tests.m')
+
       - name: Build HERA Runtime
         uses: matlab-actions/run-command@v2
         with:
