ci: Upload test logs as a GitHub Actions artifact and update the unit test script header.

--- a/.github/workflows/manual_test.yml
+++ b/.github/workflows/manual_test.yml
@@ -22,3 +22,10 @@ jobs:
         uses: matlab-actions/run-command@v2
         with:
           command: run('tests/run_tests.m')
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: tests/logs/*.txt
