--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
-          release: 'R2024b' # Adjust to your target MATLAB version
+          release: 'R2025b' # Adjust to your target MATLAB version but keep incompatibility issues in mind!
           products: |
             Statistics_and_Machine_Learning_Toolbox
             Parallel_Computing_Toolbox
