--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -10,6 +10,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+    env:
+      MATLAB_LICENSE: ${{ secrets.MATLAB_LICENSE }}
+
 
     steps:
       - name: Checkout Repository
@@ -30,14 +33,18 @@ jobs:
           command: run('tests/run_tests.m')
 
       - name: Build HERA Runtime
+        if: env.MATLAB_LICENSE != ''
         uses: matlab-actions/run-command@v2
         with:
           command: |
             addpath('deploy');
             build_hera();
 
+
       - name: Archive Artifacts
+        if: env.MATLAB_LICENSE != ''
         uses: actions/upload-artifact@v4
         with:
+
           name: HERA_Installer_${{ matrix.os }}
           path: deploy/output/
