ci: grant necessary workflow permissions for contents, checks, and actions

--- a/.github/workflows/manual_test.yml
+++ b/.github/workflows/manual_test.yml
@@ -3,6 +3,11 @@ name: Testing HERA
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  checks: write
+  actions: read
+
 jobs:
   run-tests:
     name: Testing HERA
