--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -2,6 +2,11 @@ name: Build HERA Runtime
 
 on:
   workflow_dispatch:
+  release:
+    types: [published]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -48,3 +53,9 @@ jobs:
 
           name: HERA_Installer_${{ matrix.os }}
           path: deploy/output/
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: deploy/output/*
