--- a/data/examples/results/HERA_Example_2/configuration.json
+++ b/data/examples/results/HERA_Example_2/configuration.json
@@ -17,16 +17,16 @@
     "run_power_analysis": true,
     "power_simulations": 10000,
     "min_data_completeness": 0.8,
-    "manual_B_thr": 2000,
+    "manual_B_thr": 1000,
     "manual_B_ci": 5000,
-    "manual_B_rank": 500,
+    "manual_B_rank": 250,
     "bootstrap_thresholds": {
       "B_start": 100,
-      "B_step": 100,
+      "B_step": 150,
       "B_end": 10000,
       "n_trials": 25,
       "min_steps_for_convergence_check": 1,
-      "convergence_tolerance": 0.005,
+      "convergence_tolerance": 0.01,
       "smoothing_window": 3,
       "convergence_streak_needed": 3
     },
@@ -34,23 +34,23 @@
       "B_start": 100,
       "B_step": 200,
       "B_end": 20000,
-      "n_trials": 25,
+      "n_trials": 30,
       "min_steps_for_convergence_check": 1,
-      "convergence_tolerance": 0.01,
-      "smoothing_window": 4,
+      "convergence_tolerance": 0.05,
+      "smoothing_window": 3,
       "convergence_streak_needed": 3
     },
     "bootstrap_ranks": {
       "B_start": 50,
-      "B_step": 10,
+      "B_step": 25,
       "B_end": 1500,
-      "n_trials": 15,
+      "n_trials": 20,
       "min_steps_for_convergence_check": 1,
       "convergence_tolerance": 0.005,
       "smoothing_window": 3,
       "convergence_streak_needed": 3
     },
-    "folderPath": "/Users/lukasvonerdmannsdorff/HERA-Matlab/data/examples/Example_2",
+    "folderPath": "/HERA-Matlab/data/examples/Example_2",
     "fileType": ".csv",
     "available_metrics": [
       "CNR",
@@ -62,14 +62,9 @@
       "CNR",
       "SNR"
     ],
-    "output_dir": "/Users/lukasvonerdmannsdorff/HERA-Matlab/data/results",
+    "output_dir": "/HERA-Matlab/data/examples/results/HERA_Example_2",
     "selected_permutations": [
       [
-        2,
-        1,
-        3
-      ],
-      [
         3,
         1,
         2
@@ -93,6 +88,11 @@
         2,
         3,
         1
+      ],
+      [
+        2,
+        1,
+        3
       ]
     ],
     "config": {
@@ -113,12 +113,39 @@
       "run_power_analysis": true,
       "power_simulations": 10000,
       "min_data_completeness": 0.8,
-      "manual_B_thr": 2000,
-      "manual_B_ci": 10000,
-      "manual_B_rank": 500,
-      "bootstrap_thresholds": {},
-      "bootstrap_ci": {},
-      "bootstrap_ranks": {},
+      "manual_B_thr": [],
+      "manual_B_ci": [],
+      "manual_B_rank": [],
+      "bootstrap_thresholds": {
+        "B_start": 100,
+        "B_step": 150,
+        "B_end": 10000,
+        "n_trials": 25,
+        "min_steps_for_convergence_check": 1,
+        "convergence_tolerance": 0.01,
+        "smoothing_window": 3,
+        "convergence_streak_needed": 3
+      },
+      "bootstrap_ci": {
+        "B_start": 100,
+        "B_step": 200,
+        "B_end": 20000,
+        "n_trials": 30,
+        "min_steps_for_convergence_check": 1,
+        "convergence_tolerance": 0.05,
+        "smoothing_window": 3,
+        "convergence_streak_needed": 3
+      },
+      "bootstrap_ranks": {
+        "B_start": 50,
+        "B_step": 25,
+        "B_end": 1500,
+        "n_trials": 20,
+        "min_steps_for_convergence_check": 1,
+        "convergence_tolerance": 0.005,
+        "smoothing_window": 3,
+        "convergence_streak_needed": 3
+      },
       "folderPath": "",
       "fileType": "",
       "available_metrics": [],
