--- a/.github/workflows/paper_check.yml
+++ b/.github/workflows/paper_check.yml
@@ -7,9 +7,9 @@ jobs:
     name: Paper Check
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Build Paper
-        uses: openjournals/openjournals-draft-action@v1
+        uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
           paper-path: paper/paper.md
