feat: add python packaging and matlab toolbox builder
- add script to package HERA as matlab toolbox (.mltbx)
- implement deploy scripts for python package generation
- update ci workflow to build python artifacts and toolbox
- docs: add python usage guide and installation steps
- fix: include thresholds in results structure
- fix: correct permutation setup for disabled sensitivity analysis

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -37,13 +37,14 @@ jobs:
         with:
           command: run('tests/run_HERA_tests.m')
 
-      - name: Build HERA Runtime
+      - name: Build HERA Runtime and Toolbox
         if: env.MATLAB_LICENSE != ''
         uses: matlab-actions/run-command@v2
         with:
           command: |
             addpath('deploy');
             build_hera();
+            package_HERA_toolbox();
 
 
       - name: Archive Artifacts
@@ -52,7 +53,9 @@ jobs:
         with:
 
           name: HERA_Installer_${{ matrix.os }}
-          path: deploy/output/
+          path: |
+            deploy/output/
+            deploy/output/*.mltbx
 
       - name: Release
         uses: softprops/action-gh-release@v2
