refactor: optimize build workflow and python packaging validation
- integrate python build step into ci release pipeline checking for new releases
- disable installer generation to streamline pypi distribution
- docs: clarify manual matlab runtime requirement
- update build script logging with release instructions

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -45,6 +45,7 @@ jobs:
             addpath('deploy');
             build_hera();
             package_HERA_toolbox();
+            build_hera_python();
 
 
       - name: Archive Artifacts
