--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -43,9 +43,9 @@ jobs:
         with:
           command: |
             addpath('deploy');
-            build_hera();
+            build_HERA_matlab();
             package_HERA_toolbox();
-            build_hera_python();
+            build_HERA_python();
 
 
       - name: Archive Artifacts
@@ -56,10 +56,13 @@ jobs:
           name: HERA_Installer_${{ matrix.os }}
           path: |
             deploy/output/
-            deploy/output/*.mltbx
+
 
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: deploy/output/*
+          files: |
+            deploy/output/matlab/*
+            deploy/output/toolbox/*
+            deploy/output/python/*
