--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -59,12 +59,22 @@ jobs:
           mkdir -p docs/images
           cp -r paper/images/* docs/images/ 2>/dev/null || true
 
+          # Create a temporary copy of the paper to clean up attributes that break MkDocs
+          cp paper/paper.md paper/paper_clean.md
+          
+          # Remove Pandoc image attributes (e.g., {height=85%}) to force standard Markdown output
+          # This ensures MkDocs handles the relative paths correctly.
+          sed -i 's/{height=[^}]*}//g' paper/paper_clean.md
+
+          # Enable link-citations in the YAML metadata
+          sed -i 's/bibliography: paper.bib/bibliography: paper.bib\nlink-citations: true/' paper/paper_clean.md
+
           # Convert Paper to Documentation Page
           # Uses Pandoc to:
           # - Resolve citations from paper.bib ([@Auth2025] -> (Auth, 2025))
           # - Append bibliography
           # - Convert to GitHub Flavored Markdown
-          pandoc paper/paper.md \
+          pandoc paper/paper_clean.md \
             -o docs/Methodology.md \
             --from markdown --to gfm \
             --citeproc \
