--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -80,7 +80,7 @@ jobs:
           # - Use APA style to enforce inclusion of DOIs/URLs
           pandoc paper/paper_clean.md \
             -o docs/Methodology.md \
-            --from markdown --to html \
+            --from markdown --to gfm \
             --citeproc \
             --csl https://www.zotero.org/styles/apa \
             --bibliography paper/paper.bib
