fix: seperate readme and landing page in Github IO page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ extra_css:
 
 nav:
   - Home: index.md
+  - Readme: README.md
   - User Guide:
     - Theoretical Background: Methodology.md
     - Ranking Modes: Ranking_Modes_Explained.md
